[gd_scene load_steps=7 format=3 uid="uid://dqom4f33x47bb"]

[ext_resource type="Script" path="res://player/abilities/shoot/shoot.gd" id="1_spjot"]
[ext_resource type="AudioStream" uid="uid://wurmo7bhfkfd" path="res://player/abilities/shoot/audio/shoot.wav" id="2_3fxkv"]
[ext_resource type="AudioStream" uid="uid://b5jknt70mvwwm" path="res://player/abilities/shoot/audio/bang.wav" id="3_ng852"]
[ext_resource type="AudioStream" uid="uid://x5mjykmn3yqk" path="res://player/abilities/shoot/audio/trigger.wav" id="4_1rhmh"]
[ext_resource type="AudioStream" uid="uid://dyuuk1xumppep" path="res://player/abilities/shoot/audio/shell.wav" id="5_br804"]
[ext_resource type="AudioStream" uid="uid://dawjk4vcd5lv7" path="res://player/abilities/shoot/audio/reload.wav" id="6_ib3ji"]

[node name="Shoot" type="Position3D"]
script = ExtResource("1_spjot")

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_3fxkv")
volume_db = -15.0
max_polyphony = 100

[node name="BangSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ng852")
volume_db = -30.0
max_polyphony = 100

[node name="TriggerSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1rhmh")
volume_db = -20.0
max_polyphony = 100

[node name="ShellSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_br804")
volume_db = -15.0
max_polyphony = 100

[node name="ReloadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ib3ji")
volume_db = -5.0
max_polyphony = 100

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AmmoLeftBorder" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = 10.0
offset_right = 16.0
offset_bottom = 15.0

[node name="AmmoLeft" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = 11.0
offset_right = 15.0
offset_bottom = 14.0
color = Color(0, 0, 0, 1)

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -100)

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true
